# EE418-Senior-Design

./: .gitignore  CHANGES  HACKING  INSTALL  Makefile  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  configure_workspace.sh  diff-12-9-19.txt  extractBuildChain.sh  sendtoback.txt  testshape_overlap.fig  update-version_m4  version.m4
Libraries/Electronic/Schematic/: adder.fig  battery.fig  capacitor_nonpolar.fig  capacitor_polar.fig  circle_large.fig  circle_med.fig  circle_small.fig  coil.fig  crystal.fig  current_source.fig  diamond.fig  diamond_large.fig  diamond_large_fill.fig  diamond_med.fig  diamond_small.fig  diamond_small_fill.fig  diode.fig  dot_large.fig  dot_med.fig  dot_small.fig  drawing_label.fig  fet1.fig  fet2.fig  fet_j_n.fig  fet_j_p.fig  fet_mos.fig  fet_nmos.fig  fet_pmos.fig  frame_ground.fig  fuse.fig  fuse2.fig  ground.fig  heater.fig  inductor.fig  led.fig  logic_ground.fig  mov.fig  multiplier.fig  nch_igbt.fig  npn.fig  (+22 more)
app-defaults/: Fig  Fig.in
doc/: Makefile.am  Makefile.in  xfig_man.html.in
doc/html/: animate.js  authors.html  bugs_fixed.html  faq.html  latex_and_xfig.html  layers.html  new_features.html  panning.html  printing.html
doc/html/images/: pspbrwse.jbf  xfig-title.fig
doc/html/japanese/: accelerators.html  authors.html  button_frame.fig  contents.html  drawing.html  faq.html  fig-format.html  global_settings.html  i18n.html  installation.html  japanese.ps  latex_and_xfig.html  layers.html  main_menus.html  new_features.html  options.html  screen_image_map.html
fig2dev-3.2.7b/: CHANGES  INSTALL  aclocal.m4  config.h.in  config.status  configure.ac  version.m4
fig2dev-3.2.7b/fig2dev/: Nmakefile  alloc.h  arrow.c  bool.h  bound.c  colors.c  config.vc  config.vc.in  drivers.h  fig2dev.c  fig2dev.h  free.c  getopt.c  object.h  read.c  read1_3.c  trans_spline.c
fig2dev-3.2.7b/fig2dev/dev/: Makefile  Makefile.am  Makefile.in  asc85ec.c  genbitmaps.c  genbox.c  gencgm.c  gendxf.c  genemf.c  genemf.h  genepic.c  gengbx.c  genge.c  genibmgl.c  genlatex.c  genmap.c  genmf.c  genmp.c  genpdf.c  genpic.c  genpict2e.c  genpictex.c  genps.c  genps.h  genpstex.c  genpstricks.c  genptk.c  genshape.c  gensvg.c  gensvg.h  gentextyl.c  gentikz.c  gentk.c  gentpic.c  genvdx.c  psencode.c  psencode.h  psfonts.c  psimage.h  psprolog.h  (+16 more)
fig2dev-3.2.7b/fig2dev/dev/.deps/: asc85ec.Po  genbitmaps.Po  genbox.Po  gencgm.Po  gendxf.Po  genemf.Po  genepic.Po  gengbx.Po  genge.Po  genibmgl.Po  genlatex.Po  genmap.Po  genmf.Po  genmp.Po  genpdf.Po  genpic.Po  genpict2e.Po  genpictex.Po  genps.Po  genpstex.Po  genpstricks.Po  genptk.Po  genshape.Po  gensvg.Po  gentextyl.Po  gentikz.Po  gentk.Po  gentpic.Po  psencode.Po  psfonts.Po  readeps.Po  readgif.Po  readjpg.Po  readpcx.Po  readpics.Po  readpng.Po  readppm.Po  readtif.Po  readxbm.Po  readxpm.Po  (+4 more)
fig2dev-3.2.7b/fig2dev/lib/: malloc.c  realloc.c  strndup.c
fig2dev-3.2.7b/fig2dev/tests/: Makefile.am  atlocal.in  bitmaps.at  input.at  output.at  package.m4  read.at  test1.c  testsuite
fig2dev-3.2.7b/fig2dev/tests/data/: line.fig
fig2dev-3.2.7b/man/: fig2dev.1.in
fig2dev-3.2.7b/transfig/: mkfile.c  sys.c  transfig.c  transfig.h  txfile.c
lib/: realloc.c
splash-image/: spl_bckgnd.fig
src/: Makefile.am  Makefile.in  Xosdefs.h  d_arc.c  d_arc.h  d_arcbox.c  d_box.c  d_box.h  d_ellipse.c  d_line.c  d_line.h  d_picobj.c  d_regpoly.c  d_spline.c  d_spline.h  d_subspline.c  d_subspline.h  d_text.c  d_text.h  dirstruct.h  e_addpt.c  e_addpt.h  e_align.c  e_arrow.c  e_arrow.h  e_break.c  e_chop.c  e_chop.h  e_compound.c  e_convert.c  e_convert.h  e_copy.c  e_copy.h  e_delete.c  e_deletept.c  e_deletept.h  e_edit.c  e_edit.h  e_flip.c  e_flip.h  (+159 more)
tests/: Makefile.am  Makefile.in  atlocal.in  package.m4  test1.c  test2.c  testsuite  testsuite.at
xfig-3.2.7b/: CHANGES  HACKING  INSTALL  Makefile.am  README  config.status  configure.ac  version.m4
xfig-3.2.7b/Libraries/Electronic/Schematic/Imperial/: f_trans-fet-n-type.fig.bak  f_trans-fet-p-type.fig.bak
xfig-3.2.7b/app-defaults/: Fig
xfig-3.2.7b/doc/: Makefile.am  xfig.man.in  xfig_man.html.in
xfig-3.2.7b/doc/html/: fig-format.html  i18n.html  installation.html  options.html
xfig-3.2.7b/doc/html/images/: xfig-title.fig  xfig-title.fig.in
xfig-3.2.7b/doc/html/japanese/: attributes.html  authors.html  bugs_fixed.html  drawing.html  editing.html  introduction.html  miscellaneous.html  panning.html  printing.html
xfig-3.2.7b/lib/: malloc.c  realloc.c
xfig-3.2.7b/splash-image/: spl_bckgnd.fig  spl_bckgnd.fig.in
xfig-3.2.7b/src/: Makefile.am  SAVE.fig  Xfuncs.h  d_arc.c  d_arc.h  d_arcbox.c  d_box.c  d_box.h  d_ellipse.c  d_line.c  d_line.h  d_picobj.c  d_regpoly.c  d_spline.c  d_spline.h  d_subspline.c  d_subspline.h  d_text.c  e_addpt.c  e_addpt.h  e_align.c  e_arrow.c  e_arrow.h  e_break.c  e_chop.c  e_chop.h  e_compound.c  e_convert.c  e_convert.h  e_copy.c  e_copy.h  e_delete.c  e_deletept.c  e_deletept.h  e_edit.c  e_edit.h  e_flip.c  e_flip.h  e_glue.c  e_joinsplit.c  (+75 more)
xfig-3.2.7b/tests/: Makefile.am  Makefile.in  atlocal.in  package.m4  test1.c  testsuite  testsuite.at
